dataset1235/2025-2/1955397009/users/4276496853/executions/903431226_208040576.log
== SUBMISSION (2025-08-26 13:03:30)
-- CODE: 
preco = float(input())
preco_final =  preco * 0.85 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 2
    preco_final =  preco * 0.85 15 / 100 * preco
                                ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:09:02)
-- CODE: 
preco = float(input())
preco_final =  preco * 0.85 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
12240.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
1.9125
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
0.8500000000000001
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
340.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.4000000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:08:19)
-- CODE: 
preco = float(input())
preco_final =  preco * 0.15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
2160.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.33749999999999997
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
0.15
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
60.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 13:10:46)
-- CODE: 
preco = float(input())
preco_final =  preco * 0.85 
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
